# rapids-cmake

./: RAPIDS.cmake  README.md  cmake-format-rapids-cmake.json  dependencies.yaml
docs/: api.rst  hardware_resources_and_testing.rst
docs/cpp_code_snippets/: rapids_cmake_ctest_allocation.cpp  rapids_cmake_ctest_allocation.hpp
rapids-cmake/: rapids-test.cmake
rapids-cmake/cmake/: support_conda_env.cmake
rapids-cmake/export/: export.cmake
rapids-cmake/export/detail/: component.cmake
rapids-cmake/export/template/: config.cmake.in
rapids-cmake/test/: add.cmake  generate_resource_spec.cmake  gpu_requirements.cmake  init.cmake  install_relocatable.cmake
rapids-cmake/test/detail/: detect_number_of_gpus.cmake  generate_compute_allocation.cmake  generate_resource_spec.cpp  generate_resource_spec.cu  rapids_cmake_ctest_allocation.cpp  rapids_cmake_ctest_allocation.hpp  record_install.cmake  record_test_command.cmake  record_test_component.cmake  run_gpu_test.cmake
rapids-cmake/test/template/: resource_spec.json
testing/: CMakeLists.txt
testing/export/export-verify-build-components-dependencies/: CMakeLists.txt
testing/export/export-verify-build-components-targets/: CMakeLists.txt
testing/export/export-verify-build-multiple-export-sets-to-single-component/: CMakeLists.txt
testing/export/export-verify-install-components/: CMakeLists.txt
testing/export/export_component-build/: CMakeLists.txt
testing/test/: CMakeLists.txt  add-with-install-component.cmake  add-with-no-gpus.cmake  generate_resource_spec-invalid-mode.cmake  generate_resource_spec-no-gpus.cmake  generate_resource_spec-simple.cmake  gpu_requirements-char-gpu.cmake  gpu_requirements-char-percent.cmake  gpu_requirements-max-percent.cmake  gpu_requirements-min-percent.cmake  gpu_requirements-multi.cmake  gpu_requirements-negative-gpu.cmake  gpu_requirements-negative-percent.cmake  gpu_requirements-no-gpus.cmake  gpu_requirements-no-percent.cmake  gpu_requirements-over-max-percent.cmake  gpu_requirements-single.cmake  gpu_requirements-zero-percent.cmake  init-existing-specfile.cmake  init-simple.cmake  init-test-targets-exist.cmake  install_relocatable-labels.cmake  install_relocatable-simple.cmake  install_relocatable-wrong-component.cmake  rapids-test.cmake
testing/test/add-allocation-simple/: CMakeLists.txt  main.cu
testing/test/add-impossible-allocation/: main.cu
testing/test/add-multi-allocations-same-gpu/: main.cu
testing/test/add-multi-jobs-single-gpu/: CMakeLists.txt  main.cu
testing/test/add-single-job-multi-gpu/: main.cu
testing/test/detail/: file_locker.hpp
testing/test/init-activate_allocation_simple/: CMakeLists.txt  main.cpp  main.cu
testing/test/init-activate_multi_allocations_same_gpu/: CMakeLists.txt  main.cu
testing/test/init-activate_multi_jobs_multi_gpu/: CMakeLists.txt  main.cpp
testing/test/init-activate_multi_jobs_single_gpu/: CMakeLists.txt  main.cpp
testing/test/init-activate_multiple_allocations_same_gpu/: CMakeLists.txt  main.cu
testing/test/init-with_no_resource_spec/: CMakeLists.txt  main.cpp
testing/utils/: cmake_ctest_test.cmake  cmake_test.cmake  determine_gpu_count.cmake
(+9 files in other folders)
